# IT-Projekt-WS25

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  WSL-SETUP.md  build  core  dependencies.sh  fib.ll  main.ocn  ocn_stdlib.c  out  out.ll  output.ll  pow.ll  print_i32.c  test.c  test.ocn  test.txt  test1
.devcontainer/: devcontainer.json
.devcontainer/clion/: devcontainer.json
.devcontainer/vscode/: devcontainer.json
.vscode-ext/: language-configuration.json  ocn.tmLanguage.json  package.json
app/: main.ocn  ocn  ocn_stdlib.c
build-report/: CMakeCache.txt  Makefile  cmake_install.cmake
lib/utf8cpp/: utf8.h
lib/utf8cpp/utf8/: checked.h  core.h  cpp11.h  cpp17.h  cpp20.h  unchecked.h
res/: DFSV1.0  RulesV1.0.ebnf  Syntax.ebnf  SyntaxV1.0.ebnf  example_list.ocn
src/: AST.cpp  AST.h  CharUtil.h  ErrorHandler.cpp  ErrorHandler.h  Lexer.cpp  Lexer.h  Macros.h  PrintUtil.h  PrinterVisitor.cpp  PrinterVisitor.h  SmartPtr.c  SymbolTable.cpp_  SymbolTable.h  SyntaxError.h  Token.cpp  Token.h  Typedef.h  Util.h  _doc.md  main.cpp
src/ast/: AST.cpp  AST.h  CodeGenVisitor.cpp  CodeGenVisitor.h  PrintVisitor.cpp  PrintVisitor.h  Printer.cpp  Printer.h  PrinterVisitor.cpp  PrinterVisitor.h  Type.cpp  Type.h  Visitor.h  _doc.md
src/codegen/: AllocManager.cpp  AllocManager.h  CodeGen.cpp  CodeGen.h  CodeGenContext.cpp  CodeGenContext.h  ExprCodeGen.cpp  ExprCodeGen.h  StmtCodeGen.cpp  StmtCodeGen.h  TypeConverter.cpp  TypeConverter.h
src/core/: CharUtil.h  DefaultDecls.h  ErrorHandler.cpp  ErrorHandler.h  Macros.h  Operators.cpp  Operators.h  PrintUtil.h  SourceLoc.h  Typedef.h  U8String.cpp  U8String.h
src/hir/: HIR.cpp  HIR.h  Lower.cpp  Lower.h  LoweringContext.cpp  LoweringContext.h
src/lexer/: Lexer.cpp  Lexer.h  Token.cpp  Token.h
src/mir/: ExprLowerer.cpp  ExprLowerer.h  Lowerer.cpp  Lowerer.h  LoweringContext.h  MIR.cpp  MIR.h  MIRGraphviz.h  StmtLowerer.cpp  StmtLowerer.h  Visualizer.h
src/mir_old/: Lowerer.cpp  Lowerer.h  MIR.cpp  MIR.h  MIRGraphviz.h
src/mir_old_2/: ExprLowerer.cpp  ExprLowerer.h  Lowerer.h  LoweringContext.h  MIR.cpp  MIR.h  StmtLowerer.cpp  StmtLowerer.h
src/parser/: Parser.cpp  Parser.h
src/semantic/: doc.md
src/semantic/common/: Error.h  ErrorMessages.h  Namespace.cpp  Namespace.h  Operator.cpp  Operator.h  OperatorTable.cpp  OperatorTable.h  SymbolTable.cpp  SymbolTable.h  TypeCheckerContext.cpp  TypeCheckerContext.h
src/semantic/passes/: ExplorationPass.cpp  ExplorationPass.h  TypeCheckingPass.cpp  TypeCheckingPass.h
src/type/: CloneVisitor.cpp  CloneVisitor.h  Compare.cpp  Compare.h  CompareVisitor.cpp  CompareVisitor.h  PrintVisitor.cpp  PrintVisitor.h  Printer.cpp  Printer.h  Type.cpp  Type.h  TypeFactory.cpp  TypeFactory.h  Visitor.h
src/type_checker/: ExplorationPass.cpp  ExplorationPass.h  HoistingPass.cpp  SymbolTable.cpp  SymbolTable.h  TypeChecker.cpp  TypeChecker.h
src/type_checker/common/: Declaration.cpp  Declaration.h  Namespace.cpp  Namespace.h  SymbolTable.cpp  SymbolTable.h  TypeCheckerContext.cpp  TypeCheckerContext.h
src/type_checker/passes/: ControlFlowPass.cpp  ControlFlowPass.h  ExplorationPass.cpp  ExplorationPass.h  TypeCheckingPass.cpp  TypeCheckingPass.h
src/type_refactor/: Type.cpp  Type.h  TypeFactory.cpp  TypeFactory.h
test/: Doctest.cpp  LexerTest.cpp  TestErrorHandler.cpp  TestLexer.cpp  TestType.cpp  Type.cpp
test/TestCode/0_prototype_and_comments/: Test_0_1.txt  Test_0_2.txt  Test_0_3.txt
test/TestCode/1_math/: Test_1_1.txt  Test_1_2.txt  Test_1_3.txt  Test_1_4.txt  Test_1_5.txt  Test_1_7.txt  Test_1_8.txt
test/TestCode/2_strings_and_print/: Test_2_1.txt  Test_2_2.txt  Test_2_3.txt  Test_2_4.txt  Test_2_5.txt  Test_2_6.txt  Test_2_7.txt  Test_2_8.txt
test/TestCode/4_loops/: Test_4_1.txt  (+1 more)
test/_integration/: ocn_stdlib.c  run_tests.sh
test/ast/: TestAST.cpp  TestAst.cpp  TestCloneVisitor.cpp  TestPrintVisitor.cpp  TestPrinter.cpp  TestType.cpp
test/core/: TestErrorHandler.cpp  TestU8String.cpp
test/hir/: TestHIR.cpp
test/lexer/: TestLexer.cpp
test/mir/: TestExprLowerer.cpp  TestStmtLowerer.cpp
test/parser/: TestParser.cpp
test/type/: TestCloneVisitor.cpp  TestCompare.cpp  TestCompareVisitor.cpp  TestPrintVisitor.cpp  TestPrinter.cpp  TestType.cpp  TestTypeFactory.cpp
test/type_checker/: TestTypeChecker.cpp
(+31 files in other folders)
